--- a/css/styles.css
+++ b/css/styles.css
@@ -11241,3 +11241,8 @@ body {
   font-size: 0.75rem;
   border-radius: 0.375rem !important;
 }
+
+/*customized style*/
+.icon-size{
+  font-size: 95px;
+}
