--- a/css/styles.css
+++ b/css/styles.css
@@ -11246,3 +11246,9 @@ body {
 .icon-size{
   font-size: 95px;
 }
+
+.form-control:focus {
+  outline: none;
+  box-shadow: none;
+  border-color: #e7eaed;
+}
