display all plans

--- a/css/styles.css
+++ b/css/styles.css
@@ -11308,3 +11308,12 @@ body {
   box-shadow: none; 
   border-color: #e7eaed;
 }
+
+#myCarousel{
+  background-color: rgba(0, 0, 0, .7);
+}
+
+img.opacity-img{
+  opacity: 0.5;
+  height: 350px;
+}
